--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,11 +11,9 @@ on:
 
   pull_request_target:
     types: [opened, reopened, synchronize]
-    branches-ignore:
-      - main
 
   push:
-    branches-ignore:
+    branches:
       - main
 
 env:
